# c_client_server

./: .gitignore  CMakeLists.txt  README.md  client.c  input_file.txt  run.sh  server.c
